Vertical spacing fix for Sponsors page

--- a/_sass/partials/_speakers.scss
+++ b/_sass/partials/_speakers.scss
@@ -48,8 +48,12 @@
  */
 
 .sponsors-list {
+  margin: 58px 0 0;
   width: 750px;
-  margin: 26px 0 0;
+}
+
+.sponsor {
+  margin: 0 0 56px;
 }
 
 .sponsor-img {
